# The_Real_Arri

./: output.txt
arri/: README.md  output.txt  output2.txt  pyproject.toml  research_report.md  test_ollama.py
arri/knowledge/: user_preference.txt
arri/src/arri/: crew.py  main.py
arri/src/arri/config/: agents.yaml  tasks.yaml
