[project]
name = "arri"
version = "0.1.0"
description = "ARRI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
]

[project.scripts]
arri = "arri.main:run"
run_crew = "arri.main:run"
train = "arri.main:train"
replay = "arri.main:replay"
test = "arri.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
